fix: 文章详情查询不鉴权
